<resources>
    <string name="app_name">Step Tracker</string>
    <string name="replay_offline_activity">Replay activity</string>
    <string name="show_live_activity">Live activity</string>
    <string name="record">Record activity</string>
    <string name="save">Save record</string>
    <string name="start_recording">Start</string>
    <string name="stop_recording">Stop and Save</string>
    <string name="replay_recording">Replay recording</string>

    <string name="accelerometer_count_text">Algorithm Detected steps: </string>
    <string name="step_detector_text">Step Detector Sensor steps: %s</string>
    <string name="step_counter_sensor_text">Step Counter Sensor steps: %s</string>
</resources>
